<resources>
    <string name="app_name">MyFood</string>
    <string name="general_positive_button">OK</string>
    <string name="my_food">M y  F o o d</string>
    <string name="my_food_map">M y  F o o d  M a p</string>
    <string name="go_to">Xem</string>
    <string name="logo_my_food">y Food</string>
    <string name="text_cancel">Hủy</string>
    <string name="text_send">Gởi</string>
    <string name="text_ok">Đồng ý</string>
    <string name="text_detail">Chi tiết</string>
    <string name="text_distance">Khoảng cách</string>
    <string name="text_post">Bài đăng</string>
    <string name="text_loading_3dot">Loading…</string>
    <string name="text_cost">Giá : </string>
    <string name="text_out_of_food">Tạm hết</string>
    <string name="text_display_food_cost">%1$d %2$s / %3$s</string>
    <string name="text_display_amount_buy">%1$d</string>
    <string name="text_click_again_to_exit">Nhấn một lần nữa để thoát</string>
    <string name="text_email">E-mail</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_not_a_member">Bạn không phải là thành viên ?</string>
    <string name="text_register_now">Đăng kí ngay!</string>
    <string name="text_register">Đăng kí</string>
    <string name="text_email_not_empty">Vui lòng nhập email!</string>
    <string name="text_email_wrong_format">Sai định dạng email!</string>
    <string name="text_password_not_empty">Vui lòng nhập mật khẩu!</string>
    <string name="text_password_rule">Mật khẩu phải trên 6 kí tự</string>
    <string name="text_have_error">Đã có lỗi xảy ra</string>
    <string name="text_order_food">Đặt thực phẩm</string>
    <string name="text_note_order">Ghi chú thêm</string>
    <string name="text_hint_note_create_order">Thêm ghi chú cho người bán …</string>
    <string name="text_comment">Thêm đánh giá cho người bán …</string>
    <string name="text_title_time_buy">Thời gian đến: <font fgcolor='#B2B1B2'>( &#706; 9am, &#706; 15pm)</font></string>
    <string name="text_time_hint">DD / MM / YYYY</string>
    <string name="text_time_format">dd / MM / yyyy</string>
    <string name="text_time_format_hh_mm_dd_mm_yyyy">HH:mm, dd/MM/yyyy</string>
    <string name="text_am">AM</string>
    <string name="text_pm">PM</string>
    <string name="text_date_format">dd/MM/yyyy</string>
    <string name="text_time_buy_error">Không thể nhập thời gian trong quá khứ!</string>
    <string name="text_not_empty">Trường này không được để trống!</string>
    <string name="text_wrong_phone_number_type">Sai định dạng số điện thoại</string>
    <string name="text_order_success">Đặt thành công!</string>
    <string name="text_order_duplicate">Không thể thực hiện vì đơn hàng đã được đạt trước và chưa hoàn tất!</string>
    <string name="text_title_order">Đơn Hàng</string>
    <string name="text_title_profile">Cá nhân</string>
    <string name="text_title_user_information">Thông tin cá nhân</string>
    <string name="text_order_status_requesting"><font color='#f44336'>Đang yêu cầu</font></string>
    <string name="text_order_status_approved"><font color='#2196f3'>Đã chấp nhận</font></string>
    <string name="text_order_status_done"><font color='#4caf50'>Hoàn tất</font></string>
    <string name="text_order_status_canceled"><font color='#616161'>Đã hủy</font></string>
    <string name="text_order_status_rejected"><font color='#616161'>Bị từ chối</font></string>
    <string name="text_time_buy_and_shift">%1$s <b> - </b> %2$s</string>
    <string name="text_approve">Chấp nhận</string>
    <string name="text_reject">Từ chối</string>
    <string name="text_done">Hoàn tất</string>
    <string name="text_reorder">Đặt lại</string>
    <string name="text_share_rate">Đánh giá</string>
    <string name="text_go_to">Đi đến</string>
    <string name="text_information_order">Thông tin đơn hàng</string>
    <string name="text_date_created_order">Đặt hàng vào lúc: %1$s</string>
    <string name="text_date_created_account">Đã tạo vào lúc: %1$s</string>
    <string name="text_log_out">Đăng xuất</string>
    <string name="text_display_farmer">--- Farmer ---</string>
    <string name="text_display_buyer">--- Buyer ---</string>
    <string name="text_confirm_logout">Bạn có chắc chắn muốn đăng xuất không?</string>
    <string name="text_no_data">Không có dữ liệu！</string>
    <string name="text_title_my_food">Thực phẩm của bạn</string>
    <string name="text_title_category">Loại thực phẩm</string>
    <string name="text_placeholder_input_food_name">Tên thực phẩm</string>
    <string name="text_placeholder_input_food_cost">Giá</string>
    <string name="text_food_unit">Đơn vị</string>
    <string name="text_create">Tạo</string>
    <string name="text_create_food">Tạo sản phẩm</string>
    <string name="text_edit_food">Cập nhật sản phẩm</string>
    <string name="text_title_button_edit">Cập nhật</string>
    <string name="text_edit_food_success">Cập nhật thành công</string>
    <string name="text_vn_money">đ</string>
    <string name="dialog_permission_title">Cấp quyền</string>
    <string name="dialog_permission_message">Ứng dụng cần được cấp phép để sử dụng tính năng này. Bạn có thể cấp chúng trong phần cài đặt ứng dụng.</string>
    <string name="go_to_settings">ĐI TỚI MỤC CÀI ĐẶT</string>
    <string name="text_image_options">Chọn ảnh</string>
    <string name="text_take_camera_picture">\tChụp ảnh</string>
    <string name="text_choose_from_gallery">\tThư viện</string>
    <string name="text_unit_error">Vui lòng chọn đơn vị</string>
    <string name="text_category_error">Vui lòng chọn loại thực phẩm</string>
    <string name="text_no_image_error">Vui lòng thêm ảnh cho thực phẩm</string>
    <string name="text_no_name_error">Vui lòng nhập tên của thực phẩm</string>
    <string name="text_no_cost_error">Vui lòng nhập giá của thực phẩm</string>
    <string name="text_create_food_success">Tạo mới sản phẩm thành công!</string>
    <string name="text_show_cost">Giá: %1$s đ/ %2$s</string>
    <string name="text_name">Tên</string>
    <string name="text_phone_number">Số điện thoại</string>
    <string name="text_birthday">Ngày sinh</string>
    <string name="text_farmer_rb">Nông dân</string>
    <string name="text_buyer_rb">Khách hàng</string>
    <string name="text_password_confirm">Xác nhận mật khẩu</string>
    <string name="text_wrong_password">Mật khẩu không trùng khớp</string>
    <string name="text_register_success">Tạo tài khoản thành công</string>
    <string name="text_need_permission_title">Cấp quyền</string>
    <string name="text_need_permission_message">Ứng dụng cần được cấp quyền để thực hiện chức năng này.</string>
    <string name="text_go_to_setting">ĐI TỚI CÀI ĐẶT</string>
    <string name="text_no_food">\t Tạm hết</string>
    <string name="text_have_food">\t Còn hàng</string>
    <string name="text_edit">\t Sửa</string>
    <string name="text_delete">\t Xóa</string>
    <string name="text_request_location">Bạn cần cung cấp quyền truy cập vị trí để trở thành người bán?</string>
    <string name="text_rating">Đánh giá</string>
    <string name="text_rating_success">Đánh giá thành công!</string>
    <string name="text_go_to_rating"><u>Xem đánh giá</u></string>
    <string name="text_title_toolbar_comment">Đánh giá về sản phẩm của \n %1$s</string>


    <string-array name="imageOptions">
        <item>\tChụp ảnh</item>
        <item>\tThư viện</item>
    </string-array>

    <string-array name="units">
        <item><b>Đơn vị</b></item>
        <item>Kg</item>
        <item>Gam</item>
        <item>Bó</item>
    </string-array>
</resources>
