<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey50"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_top_splash_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_bottom_splash_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexabold"
        android:text="@string/my_food"
        android:textColor="@color/colorTextLogo"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexabold"
        android:text="Xin chào !"
        android:textColor="@color/colorGrey500"
        android:textSize="@dimen/sp_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_grey_border"
        android:backgroundTint="@color/colorGrey300"
        android:fontFamily="@font/nexalight"
        android:hint="@string/text_email"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_12"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/bg_grey_border"
        android:backgroundTint="@color/colorGrey300"
        android:fontFamily="@font/nexalight"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_12"
        android:paddingEnd="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_12"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="@id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/bg_grey_border"
        android:backgroundTint="@color/colorGreen500"
        android:fontFamily="@font/nexabold"
        android:text="@string/text_login"
        android:textColor="@color/colorGrey50"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <TextView
        android:id="@+id/textViewTitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:fontFamily="@font/nexalight"
        android:text="@string/text_not_a_member"
        android:textColor="@color/colorGrey500"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:fontFamily="@font/nexabold"
        android:text="@string/text_register"
        android:textColor="@color/colorRed500"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewTitleRegister"
        app:layout_constraintTop_toTopOf="@id/textViewTitleRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>
